done style and feature.

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,16 @@
-nav, footer{
+nav{
     background-color: black;
     color: white;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-nav h1{
-    display: inline;
-}
-
-nav p{
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 30px;
-}
-
-#button, #search{
-    font-size: large;
-    font-weight: 500;
+footer{
+    background-color: black;
+    color: white;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
     text-align: center;
-    display: inline;
-    margin: 2rem 2rem auto 2rem;
-    float: right;
 }
 
 body{
@@ -33,3 +20,19 @@ body{
 .card {
     margin: 2em;
 }
+
+table{
+    width: 100%;
+    font-size: larger;
+}
+table tr{
+    height: 2em;
+}
+
+.content{
+    text-align: center;
+    font-weight: 700;
+    font-size: large;
+    margin: 10%;
+}
+
